<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <com.etiya.stepper.EtiyaStepperLayout
            android:id="@+id/etiya_stepper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:stepper_title="@string/title"
            app:stepper_description="@string/description">

            <com.etiya.stepper.EtiyaStepView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_top"
                app:step_name="@string/step_1"
                app:step_button="@string/save">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/step_1_content"/>

                </LinearLayout>

            </com.etiya.stepper.EtiyaStepView>

            <com.etiya.stepper.EtiyaStepView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_top"
                app:step_name="@string/step_2"
                app:step_button="@string/validate"
                app:step_secondary_button="@string/cancel">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/step_2_content"/>

                </LinearLayout>

            </com.etiya.stepper.EtiyaStepView>

            <com.etiya.stepper.EtiyaStepView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_top"
                app:step_name="@string/step_3"
                app:step_button="@string/save">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/step_3_content"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/custom_summary"/>

                </RelativeLayout>

            </com.etiya.stepper.EtiyaStepView>

            <com.etiya.stepper.EtiyaStepView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_top"
                app:step_name="@string/step_4"
                app:step_button="@string/submit">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/step_4_content"/>

                </LinearLayout>

            </com.etiya.stepper.EtiyaStepView>

        </com.etiya.stepper.EtiyaStepperLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>